[build-system]
requires = ["meson", "ninja", "Cython", "numpy", "scipy", "meson-python"]
build-backend = "mesonpy"

[project]
name = "michaelmendoza/ssfp"
version = "0.0.1"
authors = [
  { name="Michael Mendoza", email="askmichaelmendoza@gmail.com" },
]
description = "SSFP Simulation Package"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["mri", "grappa", "sense"]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy",
    "scipy",
    "scikit-image",
    "tqdm",
    "elasticdeform",
    "opencv-python",
    "nibabel",
    "imageio",
    "imageio-ffmpeg"
]

[project.urls]
"Homepage" = "https://github.com/michaelmendoza/ssfp"
"Bug Tracker" = "https://github.com/michaelmendoza/ssfp/issues"

[project.optional-dependencies]
examples = ["matplotlib", "jupyterlab"]